[gd_scene load_steps=3 format=3 uid="uid://bg4laydfy2dth"]

[ext_resource type="Script" uid="uid://wotiicxefo02" path="res://Scripts/UI/world_selection_menu.gd" id="1_world_selection_menu"]
[ext_resource type="Theme" uid="uid://b482uksqacwcy" path="res://Scenes/components/game_theme.tres" id="2_theme"]

[node name="WorldSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_world_selection_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.182419, 0.0441304, 0.192746, 0.9)

[node name="MainContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentPanel" type="Panel" parent="MainContainer"]
custom_minimum_size = Vector2(800, 600)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/ContentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MainContainer/ContentPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MainContainer/ContentPanel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "SELECT WORLD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="MainContainer/ContentPanel/VBoxContainer/Header"]
layout_mode = 2
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/ContentPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WorldsContainer" type="VBoxContainer" parent="MainContainer/ContentPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="NewWorldButton" type="Button" parent="MainContainer/ContentPanel/VBoxContainer/ScrollContainer/WorldsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create New World"
